fix: overflow overriding

--- a/src/runtime/app/assets/css/main.css
+++ b/src/runtime/app/assets/css/main.css
@@ -21,3 +21,7 @@
   top: 50%;
   left: 50%;
 }
+
+[data-ripple-overflow="true"] {
+  overflow: visible!important;
+}
